<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#818282"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/point_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/point_title"
            android:src="@drawable/point_icon" />

        <ImageButton
            android:id="@+id/line_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/line_title"
            android:src="@drawable/line_icon"
            android:tag="@string/line_title" />

        <ImageButton
            android:id="@+id/rectangle_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/rect_title"
            android:src="@drawable/rectangle_icon" />

        <ImageButton
            android:id="@+id/ellipse_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/ellipse_title"
            android:src="@drawable/ellipse_icon" />

        <ImageButton
            android:id="@+id/cube_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/cube_title"
            android:src="@drawable/cube_icon" />

        <ImageButton
            android:id="@+id/line_with_circles_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/line_with_circles_title"
            android:src="@drawable/line_with_circles_icon" />

    </LinearLayout>

    <com.example.fifthlab.CanvasView
        android:id="@+id/canvas_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/table_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/table_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>